RESOLVED FIXED233801
MomentumEventDispatcher curve sometimes doesn't match the system curve
https://bugs.webkit.org/show_bug.cgi?id=233801
Summary MomentumEventDispatcher curve sometimes doesn't match the system curve
Tim Horton
Reported 2021-12-02 21:48:35 PST
MomentumEventDispatcher curve sometimes doesn't match the system curve
Attachments
Patch (21.66 KB, patch)
2021-12-02 21:56 PST, Tim Horton
ews-feeder: commit-queue-
Patch (21.84 KB, patch)
2021-12-02 22:05 PST, Tim Horton
ews-feeder: commit-queue-
Patch (21.85 KB, patch)
2021-12-02 22:38 PST, Tim Horton
no flags
Tim Horton
Comment 1 2021-12-02 21:56:13 PST
Tim Horton
Comment 2 2021-12-02 21:59:11 PST
Tim Horton
Comment 3 2021-12-02 22:05:23 PST
Tim Horton
Comment 4 2021-12-02 22:38:09 PST
EWS
Comment 5 2021-12-02 23:25:27 PST
Committed r286483 (244822@main): <https://commits.webkit.org/244822@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 445811 [details].
Note You need to log in before you can comment on or make changes to this bug.